--- a/css/main.css
+++ b/css/main.css
@@ -1247,6 +1247,12 @@
     width: 95%; }
   .slider__wrapper {
     overflow: hidden; }
+    @media screen and (max-width: 769px) {
+      .slider__wrapper {
+        width: 60%; } }
+    @media screen and (max-width: 480px) {
+      .slider__wrapper {
+        width: 90%; } }
   .slider .section__title-slider {
     text-align: left;
     font-size: 2.25rem;
@@ -1284,14 +1290,12 @@
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
-        flex-direction: column;
-        width: 60%; } }
+        flex-direction: column; } }
     @media screen and (max-width: 480px) {
       .slider__item {
         -webkit-box-align: center;
         -ms-flex-align: center;
-        align-items: center;
-        width: 90%; } }
+        align-items: center; } }
   .slider .btn__arrow--prev {
     width: 2.5rem;
     -webkit-box-pack: start;
@@ -1455,7 +1459,7 @@
       align-items: center; } }
 
 .hamburger {
-  display: none;
+  display: none !important;
   z-index: 101;
   padding: 15px 15px;
   display: inline-block;
@@ -1480,9 +1484,9 @@
   overflow: visible; }
   @media screen and (max-width: 769px) {
     .hamburger {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex; } }
+      display: -webkit-box !important;
+      display: -ms-flexbox !important;
+      display: flex !important; } }
 
 .hamburger:hover {
   opacity: 0.7; }
