--- a/css/blocks/_btn.scss
+++ b/css/blocks/_btn.scss
@@ -10,4 +10,8 @@
   color:#006633;
   display: inline-block;
   margin-bottom: rem(10px);
+  outline: none;
+  &:hover{
+    cursor: pointer;
+  }
 }
