--- a/css/blocks/_menu1.scss
+++ b/css/blocks/_menu1.scss
@@ -31,8 +31,16 @@
     justify-content: center;
     &--active {
       .menu1__content {
-        width: 100%;
+        width: 630px;
+        @include tablets {
+          max-width: 100%;
+        }
+        @include phones {
+          max-width: 200px;
+        }
+
       }
+      
     }
   }
 
@@ -63,7 +71,7 @@
   }
   &__content {
     display: none;
-    width: 0;
+    width: 0px;
     max-width: 630px;
     transition: width 0.3s;
     //padding:rem(55px) rem(32px);
