--- a/css/blocks/_slider.scss
+++ b/css/blocks/_slider.scss
@@ -37,7 +37,7 @@
     position: relative;
     align-items: center;
     transition: right 0.3s;
-    justify-content: center;
+    justify-content: flex-start;
 
   }
   &__item {
