--- a/css/main.scss
+++ b/css/main.scss
@@ -40,7 +40,7 @@ $phones-small: 390px;
 @import "blocks/_slider.scss";
 @import "blocks/_content.scss";
 @import "blocks/_burger.scss";
-
+@import "blocks/_video.scss";
 
 html{
   font-size: 16px;
