--- a/css/blocks/_menu1.scss
+++ b/css/blocks/_menu1.scss
@@ -30,15 +30,11 @@
     align-items: center;
     justify-content: center;
     &--active {
+      
       .menu1__content {
-        width: 630px;
-        @include tablets {
-          max-width: 100%;
-        }
-        @include phones {
-          max-width: 200px;
-        }
-
+        
+       
+        max-width: 630px;
       }
       
     }
@@ -71,11 +67,11 @@
   }
   &__content {
     display: none;
-    width: 0px;
-    max-width: 630px;
-    transition: width 0.3s;
-    //padding:rem(55px) rem(32px);
+    max-width: 0px;
     display: flex;
+    transition: max-width 0.3s;
+    //padding:rem(55px) rem(32px);
+   
     background-color: rgba($color: #000000, $alpha: 0.5);
 
     flex-grow: 2;
