--- a/css/blocks/_card.scss
+++ b/css/blocks/_card.scss
@@ -1,5 +1,5 @@
-.card{
+.map{
   width:inherit;
-  background: url(/img/contacts/card.png) center center / cover   no-repeat ;
+  // background: url(/img/contacts/card.png) center center / cover   no-repeat ;
   min-height: 100%;
 }
