--- a/css/main.css
+++ b/css/main.css
@@ -804,9 +804,8 @@
   .team .item__pic-image {
     max-width: 100%; }
 
-.card {
+.map {
   width: inherit;
-  background: url(/img/contacts/card.png) center center/cover no-repeat;
   min-height: 100%; }
 
 .footer {
