--- a/css/main.css
+++ b/css/main.css
@@ -1763,7 +1763,8 @@
     align-items: center; }
 
 html {
-  font-size: 16px; }
+  font-size: 16px;
+  height: 100%; }
   @media screen and (max-width: 769px) {
     html {
       font-size: 15px; } }
@@ -1780,12 +1781,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
   position: relative;
   font-family: "AlegreyaSans";
-  color: #0d0d0d; }
+  color: #0d0d0d;
+  height: 100%; }
+
+.maincontent {
+  height: 100%;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  -o-transition: transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+  will-change: transform; }
 
 .wrapper {
   position: relative;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   overflow: hidden; }
 
 .section {
